Got rid of warnings when using Java 10